# AINewsLetter

./: .gitignore  ARCHITECTURE.md  README.md
backend/: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/deployments/: README.md
backend/docker/: README.md  entrypoint.sh
backend/docs/: PRODUCTION.md  agent_dataflow.md  architecture_production.md  cicd.md  database_optimization.md  deployment.md  development.md  disaster_recovery.md  known_risks.md  monitoring.md  performance_report.md  runbook.md  security.md
backend/github/: README.md
backend/infrastructure/: README.md
backend/monitoring/: prometheus.yml
backend/scripts/: backup_database.sh  create_migration.sh  load_test.py  recover.py  restore_database.sh  run_local.sh  seed.py
backend/security/: SECURITY.md  dependency_scanning.md
backend/tests/: conftest.py  test_categorization.py  test_collection_api.py  test_collection_extra.py  test_fact_checking.py  test_fact_checking_api.py  test_fact_checking_extra.py  test_health.py  test_migrations.py  test_models.py  test_newsletter_html_api.py  test_newsletter_writer.py  test_newsletter_writer_api.py  test_newsletter_writer_extra.py  test_production.py  test_production_extra.py  test_publishing.py  test_publishing_api.py  test_publishing_extra.py  test_relationships.py  test_relevance.py  test_relevance_api.py  test_relevance_extra.py  test_repositories.py  test_seed.py  (+10 more)
(+215 files in other folders)
